// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review wrapper component renders properly if a delete handler is provided 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen ds-u-margin-top--2"
    >
      <React.Fragment>
        <Button
          aria-label="Delete"
          className="ds-u-color--error"
          onClick={[Function]}
          size="small"
          variation="transparent"
        >
          Delete
        </Button>
      </React.Fragment>
    </div>
  }
  headingLevel="3"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if an edit handler is supplied 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen ds-u-margin-top--2"
    >
      <Button
        aria-label="Edit"
        onClick={[Function]}
        size="small"
        variation="transparent"
      >
        Edit
      </Button>
    </div>
  }
  headingLevel="3"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if only the required props are set 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen ds-u-margin-top--2"
    />
  }
  headingLevel="3"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if the edit link and edit handler are both omitted 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen ds-u-margin-top--2"
    />
  }
  headingLevel="3"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if the edit link is set 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen ds-u-margin-top--2"
    >
      <Link
        to="something"
      >
        Edit
      </Link>
    </div>
  }
  headingLevel="3"
>
  Hello
</Review>
`;
